fixed spacing on detailed search

--- a/a2_trip_info/DetailedSearch.css
+++ b/a2_trip_info/DetailedSearch.css
@@ -53,7 +53,7 @@
 }
 
 .ds-bottom-half-visible {
-    height: 50%;
+    height: 46%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -65,6 +65,11 @@
 
 .ds-top-half {
     height: 100%;
+    background-color: whitesmoke;
+}
+
+.ds-top-half-btn {
+    height: 96%;
     background-color: whitesmoke;
 }
 
@@ -157,11 +162,12 @@
 }
 
 .ds-map-btn {
-    height: 30px;
-    width: 600px;
+    height: 4%;
+    width: 100%;
     background-color: white;
     text-align: center;
-    border-radius: 1px solid var(--grey);
+    border: 1px solid var(--grey);
+    border-radius: 5px;
 }
 
 .ds-map-btn-hidden {
